@@ -1,3 +1,4 @@
+#undef FB_NO_DEBUG
 #include                "libFireBird.h"
 
 //TAP_Osd_Copy(word srcRgnNum, word dstRgnNum, dword srcX, dword srcY, dword w, dword h, dword dstX, dword dstY,  bool sprite);
