@@ -1,3 +1,4 @@
+#undef FB_NO_DEBUG
 #include                "libFireBird.h"
 
 //TAP_Osd_PutGd(word rgn, int x, int y, TYPE_GrData * gd, bool sprite);
