@@ -1,3 +1,4 @@
+#undef FB_NO_DEBUG
 #include                "libFireBird.h"
 
 int TAP_Osd_PutPixel_Chk(char *Comment, word rgn, dword x, dword y, dword pix)
