@@ -1,3 +1,4 @@
+#undef FB_NO_DEBUG
 #include "libFireBird.h"
 
 void TAP_Osd_RestoreBox_Chk(char *Comment, word rgn, dword x, dword y, dword w, dword h, void *data)
