@@ -1041,3 +1041,4 @@ The following functions accept any form a path. The INI and language INI functio
             Fixed: Handle a possible initialization error in InitTAPex()
 2018-09-01: Fixed: Access to the CurTapTask variable (index of the currently active TAP) has been centralised in InitTAPex()
 2018-09-08: Fixed: added parentheses back to TRACEENTER/TRACEEXIT to keep backward compatibility with TAPs that use these macros
+2018-09-23: Added: FB_DEBUG_CHK and FB_NO_DEBUG to suppress all debug-like check-and-log functions
